# rubrik-cli

./: .gitignore  README.md  adapters_factory.py  chaining.md  chat_handler.py  human_handler.py  llm_client.py  llm_handler.py  main.py  persona_handler.py  personas.json  pyproject.toml  rich_renderer.py  test.py  ui_utils.py  ws_server.py
adapters/: websocket_duplex_adapter.py
adapters/duplex/: websocket_duplex_adapter.py
adapters/input/: human_input_adapter.py  input_adapter.py  server_input_adapter.py  stdin_input_adapter.py  websocket_input_adapter.py
adapters/output/: human_output_adapter.py  output_adapter.py  server_output_adapter.py  stdout_output_adapter.py  websocket_output_adapter.py
adapters/tests/: test_human_input_adapter.py  test_human_output_adapter.py  test_input_adapter.py  test_server_input_adapter.py  test_server_output_adapter.py  test_stdin_input_adapter.py  test_stdout_output_adapter.py  test_websocket_duplex_adapter.py  test_websocket_input_adapter.py
agent_handlers/: human_handler.py  llm_handler.py  persona_handler.py
messages/: message.py
response_handlers/: human_handler.py  llm_handler.py  persona_handler.py
src/: arg_parser.py  chat_handler.py  main.py  ws_server.py
src/chat_handler/: adapters.py  chat_handler.py  conversation_manager.py  response_handler_factory.py  response_utils.py  server_input_handler.py  server_messages_handler.py  ui_renderer.py  user_input_handler.py
src/llm/: llm_client.py
src/messages/: message.py  message_types.py
transport/: conversation_io.py  websocket_conversation_io.py
(+34 files in other folders)
